Adds conditional in nav bar, to show different options if you are logged in or not.
Creates controller and template for events.

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -13,7 +13,7 @@
         <li><a ng-href="#/login/register">Register</a></li>
       </ul>
       <ul class="nav navbar-nav" ng-show="authData">
-        <li class="active"><a ng-href="#/event/">Create event</a></li>
+        <li class="active"><a ng-href="#/events/">Create event</a></li>
         <li><a ng-click="auth.$unauth()">Log out</a></li>
       </ul>
     </div>
