--- a/src/app/events/create.html
+++ b/src/app/events/create.html
@@ -8,7 +8,7 @@
     <form name="eventForm" novalidate ng-submit="add()">
       <div class="form-horizontal">
         <div class="form-group required"
-             ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
+             ng-class="{ 'has-error': registerForm.eventname.$touched && registerForm.eventname.$invalid }">
           <label for="eventname" class="control-label">Choose a name for your event</label>
           <input id="eventname" ng-model="eventname" name="eventname" class="form-control" type="text"
                  placeholder="Event name" autofocus required>
@@ -69,29 +69,29 @@
                   class="input-group-addon" aria-label="Add guest">+</span>
           </div>
         </div>
+        <div class="form-group required"
+             ng-class="{ 'has-error': eventForm.location.$touched && eventForm.location.$invalid }">
+          <label for="location" class="control-label">Wich is the name of the venue?</label>
+          <input id="location" ng-model="location" name="location" class="form-control" list="venuesNames"
+                 placeholder="Venue" required>
+          <datalist id="venuesNames">
+            <option ng-repeat="place in places" value="{{place['venue']['name']}}">
+          </datalist>
+          <span class="help-block" ng-show="eventForm.location.$error.required && eventForm.location.$touched">Venue is required.</span>
+        </div>
+        <h4>Optional:</h4>
 
-      </div>
-      <h4>Optional:</h4>
+        <div class="form-group">
+          <label for="description" class="control-label">Additional description for your guests</label>
+          <textarea id="description" ng-model="description" name="description" class="form-control"
+                    placeholder="Description"></textarea>
 
-      <div class="row">
-        <div class="form-group col-md-4">
-          <label for="birthday">Birthday </label>
-          <input id="birthday" ng-model="birthday" name="birthday" class="form-control" type="date"
-                 placeholder="Birthday">
         </div>
-        <div class="form-group col-md-4">
-          <label for="employer">Employer </label>
-          <input id="employer" ng-model="employer" name="employer" class="form-control" type="text"
-                 placeholder="Employer">
         </div>
-        <div class="form-group col-md-4">
-          <label for="jobtitle">Job Title </label>
-          <input id="jobtitle" ng-model="jobtitle" name="jobtitle" class="form-control" type="text"
-                 placeholder="Job Title">
-        </div>
-      </div>
+
+
       <input type="submit" class="btn btn-primary btn-lg btn-block"
-             ng-disabled="registerForm.$invalid || !registerForm.$dirty" value="Submit">
+             ng-disabled="eventForm.$invalid || !eventForm.$dirty" value="Submit">
     </form>
   </div>
 
