--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,20 +1,24 @@
-<nav class="navbar navbar-static-top navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a ng-href="#/">
-      <p class="navbar-brand" >
-        Events!
-      </p>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-login"
+              ng-click="isCollapsed = !isCollapsed">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#/">Events!</a>
         </a>
     </div>
-    <div class="collapse navbar-collapse" id="navbar-login" >
+    <div class="collapse navbar-collapse" collapse="isCollapsed" id="navbar-login">
       <ul class="nav navbar-nav" ng-show="!authData">
         <li class="active"><a ng-href="#/login/">Login</a></li>
         <li><a ng-href="#/login/register">Register</a></li>
       </ul>
       <ul class="nav navbar-nav" ng-show="authData">
         <li class="active"><a ng-href="#/events/">Create event</a></li>
-        <li><a ng-click="auth.$unauth()">Log out</a></li>
+        <li><a ng-click="auth.$unauth();logOut()">Log out</a></li>
       </ul>
     </div>
   </div>
