--- a/src/app/events/create.html
+++ b/src/app/events/create.html
@@ -3,11 +3,17 @@
     <acme-navbar></acme-navbar>
   </div>
   <div class="jumbotron">
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="70"
+           aria-valuemin="0" aria-valuemax="100" style="width:{{100*eventForm.$$success.required.length/5| number:0}}%">
+        <span class="sr-only">70% Complete</span>
+      </div>
+    </div>
     <h3>Please create your event</h3>
 
     <form name="eventForm" novalidate ng-submit="add()">
       <div class="form-horizontal">
-        <div class="form-group required"
+        <div class="form-group required" ng-show="page===1"
              ng-class="{ 'has-error': eventForm.eventname.$touched && eventForm.eventname.$invalid }">
           <label for="eventname" class="control-label">Choose a name for your event</label>
           <input id="eventname" ng-model="eventname" name="eventname" class="form-control" type="text"
@@ -15,7 +21,7 @@
           <span class="help-block" ng-show="eventForm.eventname.$error.required && eventForm.eventname.$touched">Event name is required.</span>
 
         </div>
-        <div class="form-group required"
+        <div class="form-group required" ng-show="page===1"
              ng-class="{ 'has-error': eventForm.eventtype.$touched && eventForm.eventtype.$invalid }">
           <label for="eventtype" class="control-label">Wich kind of event is it?</label>
           <input id="eventtype" ng-model="eventtype" name="eventtype" class="form-control" list="eventsTypes"
@@ -29,34 +35,35 @@
           </datalist>
           <span class="help-block" ng-show="eventForm.eventtype.$error.required && eventForm.eventtype.$touched">Event type is required.</span>
         </div>
-        <div class="form-group required" ng-class="{ 'has-error': eventForm.host.$touched && eventForm.host.$invalid}">
+        <div class="form-group required" ng-show="page===1"
+             ng-class="{ 'has-error': eventForm.host.$touched && eventForm.host.$invalid}">
           <label for="host" class="control-label">Who is hosting the event?</label>
           <input id="host" ng-model="host" name="host" class="form-control" type="text" placeholder="Event host"
                  required>
           <span class="help-block" ng-show="eventForm.host.$error.required && eventForm.host.$touched">Event host is required.</span>
         </div>
-        <div class="form-group required"
+        <div class="form-group required" ng-show="page===2"
              ng-class="{ 'has-error': eventForm.start.$touched && eventForm.start.$invalid}">
           <label for="start" class="control-label">When is the event starting?</label>
           <input id="start" ng-model="start" name="start" class="form-control" type="datetime-local"
                  placeholder="Start's date" required>
           <span class="help-block" ng-show="eventForm.start.$error.required && eventForm.start.$touched">Event start date is required.</span>
         </div>
-        <div class="form-group required"
+        <div class="form-group required" ng-show="page===2"
              ng-class="{ 'has-error': eventForm.duration.$touched && eventForm.duration.$invalid}">
           <label for="duration" class="control-label">How long is the event?</label>
           <timepicker id="duration" ng-model="duration" name="duration" hour-step="1" minute-step="15" min="15"
                       show-meridian="false"></timepicker>
           <span class="help-block" ng-show="eventForm.duration.$error.required && eventForm.duration.$touched">Event duration is required.</span>
         </div>
-        <div class="form-group required"
+        <div class="form-group required" ng-show="page===2"
              ng-class="{ 'has-error': eventForm.finish.$touched && eventForm.finish.$invalid}">
           <label for="finish" class="control-label">When is the event finishing?</label>
           <input id="finish" ng-model="finish" name="finish" class="form-control" type="datetime-local"
                  placeholder="Finish date" readonly>
           <span class="help-block" ng-show="eventForm.finish.$error.required && eventForm.finish.$touched">Event finish date is required.</span>
         </div>
-        <div class="form-group required">
+        <div class="form-group required" ng-show="page===3">
           <label for="guest" class="control-label">Add guests</label>
           <ul class="list-group">
             <li ng-repeat="guest in guests" class="list-group-item list-group-item-info">
@@ -71,7 +78,7 @@
                   class="input-group-addon" aria-label="Add guest">+</span>
           </div>
         </div>
-        <div class="form-group required"
+        <div class="form-group required" ng-show="page===3"
              ng-class="{ 'has-error': eventForm.location.$touched && eventForm.location.$invalid }">
           <label for="location" class="control-label">Wich is the name of the venue?</label>
           <input id="location" ng-model="location" name="location" class="form-control" list="venuesNames"
@@ -81,18 +88,22 @@
           </datalist>
           <span class="help-block" ng-show="eventForm.location.$error.required && eventForm.location.$touched">Venue is required.</span>
         </div>
-        <h4>Optional:</h4>
+        <h4 ng-show="page===3">Optional:</h4>
 
-        <div class="form-group">
+        <div class="form-group" ng-show="page===3">
           <label for="description" class="control-label">Additional description for your guests</label>
           <textarea id="description" ng-model="description" name="description" class="form-control"
                     placeholder="Description"></textarea>
 
         </div>
         </div>
-
-
-      <input type="submit" class="btn btn-primary btn-lg btn-block"
+      <div class="text-center">
+        <button type="button" class="btn btn-primary center" ng-show="page<3" ng-click="page=page+1"
+                ng-disabled="(page===1 && eventForm.$error.required.length>2)||(page===2 && eventForm.$error.required.length>1)">
+          Next section
+        </button>
+      </div>
+      <input type="submit" class="btn btn-primary btn-lg btn-block" ng-show="page===3"
              ng-disabled="eventForm.$invalid || !eventForm.$dirty" value="Submit">
     </form>
   </div>
