--- a/src/app/events/list.html
+++ b/src/app/events/list.html
@@ -7,7 +7,8 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="(key, event)  in eventsArray" ng-href="#/events/view/{{key}}">
+    <div class="col-sm-6 col-md-4" ng-repeat="event in eventsArray">
+      <a ng-href="#/events/view/{{event.$id}}">
       <div class="thumbnail">
         <div class="caption">
           <h3>{{ event.eventname }}</h3>
@@ -23,5 +24,6 @@
           <p><a ng-href=""></a></p>
         </div>
       </div>
+      </a>
     </div>
   </div>
