--- a/src/app/login/register.html
+++ b/src/app/login/register.html
@@ -29,6 +29,13 @@
         </span>
 
     </div>
+        <div class="form-group required"
+             ng-class="{ 'has-error': registerForm.pass2.$dirty && registerForm.pass2.$invalid , 'has-success': registerForm.pass2.$dirty && registerForm.pass2.$valid}">
+          <label for="pass2" class="control-label">Repeat Password</label>
+          <input id="pass2" ng-model="pass2" name="pass2" class="form-control" type="password" ng-minlength="16"
+                 placeholder="Repeat Password" match-inputs="pass" required>
+          <span class="help-block" ng-show="registerForm.pass2.$error.matchInputs && registerForm.pass2.$dirty">Passwords doesn't match.</span>
+        </div>
       </div>
       <h4>Optional:</h4>
       <div class="row">
