--- a/src/app/events/details.html
+++ b/src/app/events/details.html
@@ -2,7 +2,7 @@
   <div>
     <acme-navbar></acme-navbar>
   </div>
-  <div class="jumbotron text-center" ng-repeat="event in data">
+  <div class="jumbotron text-center">
     <h1>{{ event.eventname }}</h1>
 
     <p>{{ event.location }}</p>
@@ -15,8 +15,7 @@
 
     <p>Guests</p>
     <ul class="list-group">
-      <li ng-repeat="guest in guests" class="list-group-item list-group-item-info">
-        <span class="badge" ng-click="removeGuest(guest)" aria-label="Remove guest">-</span>
+      <li ng-repeat="guest in event.guests" class="list-group-item list-group-item-info">
         {{guest}}
       </li>
     </ul>
