--- a/src/app/login/register.html
+++ b/src/app/login/register.html
@@ -4,22 +4,26 @@
   </div>
   <div class="jumbotron">
     <h3>Please register your user</h3>
-    <form name="registerForm" novalidate ng-submit="add()">
+
+    <form name="registerForm" novalidate ng-submit="vm.add()">
       <div class="form-horizontal">
     <div class="form-group required" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
     <label for="username" class="control-label">Username</label>
-      <input id="username" ng-model="username" name="username" class="form-control" type="text" placeholder="User name" autofocus required>
+      <input id="username" ng-model="vm.username" name="username" class="form-control" type="text"
+             placeholder="User name" autofocus required>
       <span class="help-block" ng-show="registerForm.username.$error.required && registerForm.username.$touched">Username is required.</span>
 
     </div>
     <div class="form-group required" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
     <label for="email" class="control-label">Email</label>
-      <input id="email" ng-model="email" name="email" class="form-control" type="text" placeholder="Email Address" required>
+      <input id="email" ng-model="vm.email" name="email" class="form-control" type="text" placeholder="Email Address"
+             required>
       <span class="help-block" ng-show="registerForm.email.$error.required && registerForm.email.$touched">Email is required.</span>
       </div>
     <div class="form-group required" ng-class="{ 'has-error': registerForm.pass.$dirty && registerForm.pass.$invalid , 'has-success': registerForm.pass.$dirty && registerForm.pass.$valid}">
     <label for="pass" class="control-label">Password</label>
-      <input id="pass" ng-model="pass"  name="pass" class="form-control" type="password" ng-minlength="16" placeholder="Password"  lower-case upper-case required>
+      <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" ng-minlength="16"
+             placeholder="Password" lower-case upper-case required>
       <span class="help-block" ng-show="registerForm.pass.$error.required && registerForm.pass.$touched">Password is required.</span>
       <span class="help-block" ng-show="registerForm.pass.$error.minlength && registerForm.pass.$dirty">Minimium 16 characters.</span>
       <span class="help-block" ng-show="registerForm.pass.$error.upperCase && registerForm.pass.$dirty">Need's at least 1 uppercase character.</span>
@@ -32,8 +36,8 @@
         <div class="form-group required"
              ng-class="{ 'has-error': registerForm.pass2.$dirty && registerForm.pass2.$invalid , 'has-success': registerForm.pass2.$dirty && registerForm.pass2.$valid}">
           <label for="pass2" class="control-label">Repeat Password</label>
-          <input id="pass2" ng-model="pass2" name="pass2" class="form-control" type="password" ng-minlength="16"
-                 placeholder="Repeat Password" match-inputs="pass" required>
+          <input id="pass2" ng-model="vm.pass2" name="pass2" class="form-control" type="password" ng-minlength="16"
+                 placeholder="Repeat Password" match-inputs="vm.pass" required>
           <span class="help-block" ng-show="registerForm.pass2.$error.matchInputs && registerForm.pass2.$dirty">Passwords doesn't match.</span>
         </div>
       </div>
@@ -41,15 +45,18 @@
       <div class="row">
       <div class="form-group col-md-4">
         <label for="birthday">Birthday </label>
-        <input id="birthday" ng-model="birthday" name="birthday" class="form-control" type="date" placeholder="Birthday" ng-trim="false">
+        <input id="birthday" ng-model="vm.birthday" name="birthday" class="form-control" type="date"
+               placeholder="Birthday" ng-trim="false">
       </div>
       <div class="form-group col-md-4">
         <label for="employer">Employer </label>
-        <input id="employer" ng-model="employer" name="employer" class="form-control" type="text" placeholder="Employer" ng-trim="false">
+        <input id="employer" ng-model="vm.employer" name="employer" class="form-control" type="text"
+               placeholder="Employer" ng-trim="false">
       </div>
       <div class="form-group col-md-4">
         <label for="jobtitle">Job Title </label>
-        <input id="jobtitle" ng-model="jobtitle" name="jobtitle" class="form-control" type="text" placeholder="Job Title" ng-trim="false">
+        <input id="jobtitle" ng-model="vm.jobtitle" name="jobtitle" class="form-control" type="text"
+               placeholder="Job Title" ng-trim="false">
       </div>
        </div>
       <input type="submit" class="btn btn-primary btn-lg btn-block" ng-disabled="registerForm.$invalid || !registerForm.$dirty" value="Submit">
