Fix delete guest button in the event creation form.
Disable login when no password is provided.

Shows visual feedback when the password is not provided in the register and login form.

Corrects message to the user when the password is not having lowercase characters(it was saying that uppercase characters are required).

--- a/src/app/events/create.html
+++ b/src/app/events/create.html
@@ -67,7 +67,7 @@
           <label for="guest" class="control-label">Add guests</label>
           <ul class="list-group">
             <li ng-repeat="guest in vm.guests" class="list-group-item list-group-item-info">
-              <span class="badge" ng-click="removeGuest(guest)" aria-label="Remove guest">-</span>
+              <span class="badge" ng-click="vm.removeGuest(guest)" aria-label="Remove guest">-</span>
               {{guest}}
             </li>
 
@@ -90,7 +90,7 @@
         </div>
         <h4 ng-show="vm.page===3">Optional:</h4>
 
-        <div class="form-group" ng-show="page===3">
+        <div class="form-group" ng-show="vm.page===3">
           <label for="description" class="control-label">Additional description for your guests</label>
           <textarea id="description" ng-model="vm.description" name="description" class="form-control"
                     placeholder="Description"></textarea>
