--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -13,9 +13,9 @@
                  placeholder="Email Address" required autofocus>
           <span class="help-block" ng-show="loginForm.email.$error.required && loginForm.email.$touched">Email is required.</span>
         </div>
-        <div class="form-group required" ng-class="{ 'has-error': loginForm.pass.$dirty && loginForm.pass.$invalid}">
+        <div class="form-group required" ng-class="{ 'has-error': loginForm.pass.$touched && loginForm.pass.$invalid}">
           <label for="pass" class="control-label">Password</label>
-          <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" placeholder="Password">
+          <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" placeholder="Password" required>
           <span class="help-block" ng-show="loginForm.pass.$error.required && loginForm.pass.$touched">Password is required.</span>
       <span class="complex-password">
         </span>
