--- a/src/app/login/register.html
+++ b/src/app/login/register.html
@@ -20,14 +20,15 @@
              required>
       <span class="help-block" ng-show="registerForm.email.$error.required && registerForm.email.$touched">Email is required.</span>
       </div>
-    <div class="form-group required" ng-class="{ 'has-error': registerForm.pass.$dirty && registerForm.pass.$invalid , 'has-success': registerForm.pass.$dirty && registerForm.pass.$valid}">
+        <div class="form-group required"
+             ng-class="{ 'has-error': registerForm.pass.$touched && registerForm.pass.$invalid , 'has-success': registerForm.pass.$dirty && registerForm.pass.$valid}">
     <label for="pass" class="control-label">Password</label>
       <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" ng-minlength="16"
              placeholder="Password" lower-case upper-case required>
       <span class="help-block" ng-show="registerForm.pass.$error.required && registerForm.pass.$touched">Password is required.</span>
-      <span class="help-block" ng-show="registerForm.pass.$error.minlength && registerForm.pass.$dirty">Minimium 16 characters.</span>
+          <span class="help-block" ng-show="registerForm.pass.$error.minlength && registerForm.pass.$dirty">The password must be at least 16 characters long.</span>
       <span class="help-block" ng-show="registerForm.pass.$error.upperCase && registerForm.pass.$dirty">Need's at least 1 uppercase character.</span>
-      <span class="help-block" ng-show="registerForm.pass.$error.lowerCase && registerForm.pass.$dirty">Need's at least 1 uppercase character.</span>
+          <span class="help-block" ng-show="registerForm.pass.$error.lowerCase && registerForm.pass.$dirty">Need's at least 1 lowercase character.</span>
       <span class="complex-password">
       Complex password required.Minimium 16 characters, at least one lowercase and one uppercase character.
         </span>
